# Modules/Auth/app/Http/Controllers/AuthController.php
@@ -4,11 +4,14 @@ namespace Modules\Auth\Http\Controllers;
 
 use App\Http\Controllers\Controller;
 use Modules\Auth\DTO\RegisterAuthDTO;
+use Modules\Auth\DTO\LoginAuthDTO;
 use Modules\Auth\Services\RegisterService;
 use Modules\Auth\Services\LoginService;
 use Modules\Auth\Http\Requests\RegisterRequest;
+use Modules\Auth\Http\Requests\LoginRequest;
 use Symfony\Component\HttpFoundation\Response;
 use Illuminate\Database\QueryException;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
 use OpenApi\Attributes as OA;
 use Illuminate\Support\Facades\Log;
 
@@ -22,7 +25,10 @@ class AuthController extends Controller
         private LoginService $loginService  
     ){}
 
-    
+
+    /*
+        register Controller
+    */
     #[OA\Post(
         path: "/api/auth/register",
         summary: "Create User Account",
@@ -36,7 +42,7 @@ class AuthController extends Controller
     )]
     #[OA\Response(
         response: 201,
-        description: "Success to Create User",
+        description: "Success Create Data",
         content: new OA\JsonContent(
             ref: "#/components/schemas/DefaultResponse"
         )
@@ -76,9 +82,62 @@ class AuthController extends Controller
     /*
         login Controller
     */
-    public function login(){
-        return Response()->json([
-            "message" => "haha",
-        ]);
+    #[OA\Post(
+        path: "/api/auth/login",
+        summary: "authenticate account",
+        tags: ["Auth"]
+    )]
+    #[OA\RequestBody(
+        required: true,
+        content: new OA\JsonContent(
+            ref: "#/components/schemas/LoginRequestSchema"
+        )
+    )]
+    #[OA\Response(
+        response: 200,
+        description: "Success",
+        content: new OA\JsonContent(
+            ref: "#/components/schemas/DefaultResponse"
+        )
+    )]
+    #[OA\Response(
+        response: 422,
+        description: "Unprocessable Content",
+        content: new OA\JsonContent(
+            ref: "#/components/schemas/MessageWithErrorResponse"
+        )
+    )]
+    #[OA\Response(
+        response: 404,
+        description: "Not Found",
+        content: new OA\JsonContent(
+            ref: "#/components/schemas/DefaultResponse"
+        )
+    )]
+    #[OA\Response(
+        response: 500,
+        description: "Something error on the server",
+        content: new OA\JsonContent(
+            ref: "#/components/schemas/DefaultResponse"
+        )
+    )]
+    public function login(LoginRequest $request){
+        $data = LoginAuthDTO::fromArray($request->validated());
+
+        try{
+            $this->loginService->index($data);
+        }catch(ModelNotFoundException $e){
+            return response()->json([
+                'message' => 'User Not Found'
+            ], Response::HTTP_NOT_FOUND);
+        }catch(QueryException $e){
+            return response()->json([
+                'message' => 'Something error on the server '  
+            ], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
+
+        return response()->json([
+            'message' => 'login successfull'
+        ], Response::HTTP_OK);
     }
 }
