# app/OpenApi/Schemas/LoginRequestSchema.php
@@ -1,0 +1,13 @@
+<?php 
+namespace App\OpenApi\Schemas;
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(
+    schema: "LoginRequestSchema",
+    required: ["email", "password"],
+    properties: [
+        new OA\Property(property: "email", type: "string"),
+        new OA\Property(property: "password", type: "string")   
+    ]
+)]
+class LoginRequestSchema{}
